@@ -1,7 +1,8 @@
+with Ada.Text_IO;
 with AWS.Server;
 
 procedure Dummy is
    WS   : AWS.Server.HTTP;
 begin
-   null;
+   Ada.Text_IO.Put_Line ("Dummy");
 end Dummy;
